--- a/nextflow.config
+++ b/nextflow.config
@@ -25,5 +25,13 @@ process {
   withName:MQC {
 
     container = "docker://multiqc/multiqc:latest"
+  
   }
+  
+  withName:MQC2 {
+
+    container = "docker://multiqc/multiqc:latest"
+  
+  }
+
 }
