--- a/nextflow.config
+++ b/nextflow.config
@@ -35,3 +35,14 @@ process {
   }
 
 }
+
+workflow.onComplete = {
+    // any workflow property can be used here
+    println "Pipeline complete"
+    println "Command line: $workflow.commandLine"
+}
+
+workflow.onError = {
+    println "Error: something when wrong"
+}
+
