--- a/nextflow.config
+++ b/nextflow.config
@@ -22,17 +22,12 @@ process {
 
   }
 
-  withName:MQC {
+  withLabel:process_mqc {
 
     container = "docker://multiqc/multiqc:latest"
   
   }
   
-  withName:MQC2 {
-
-    container = "docker://multiqc/multiqc:latest"
-  
-  }
 
 }
 
