--- a/multiqc_config.yaml
+++ b/multiqc_config.yaml
@@ -4,6 +4,14 @@ report_header_info:
   - Contact E-mail: 'trex_info@cornell.edu'
 
 
-custom_logo: "/home/fa286/trex-extended-logo.png"
+custom_logo: "img/trex-extended-logo.png"
 custom_logo_url: https://trex.biotech.cornell.edu/
 plots_force_interactive: True
+
+
+
+fn_clean_trim:
+  - ".fastq.gz"
+  - "_report.txt"
+  - ".Log.final.out"
+  - ".ReadsPerGene.out.tab"
