added screen module

--- a/nextflow.config
+++ b/nextflow.config
@@ -27,9 +27,14 @@ process {
     container = "docker://multiqc/multiqc:latest"
   
   }
-  
+
+  withName:SCREENM {
+
+    container = "docker://bixbeta/trexrna:screen"
+  }  
 
 }
+
 
 workflow.onComplete = {
     // any workflow property can be used here
