--- a/nextflow.config
+++ b/nextflow.config
@@ -30,7 +30,7 @@ process {
 
   withName:SCREENM {
 
-    container = "docker://bixbeta/trexrna:screen"
+    container = "/workdir/TREx_shared/projects/TREX_SCREEN.sif"
   }  
 
 }
