--- a/nextflow.config
+++ b/nextflow.config
@@ -3,7 +3,7 @@ singularity.enabled = true
 singularity.autoMounts = true
 singularity.runOptions = "-B /local -B /workdir"
 apptainer.enabled = true
-apptainer.cacheDir = '$baseDir/work/'
+apptainer.cacheDir = '/work'
 
 process {
   withLabel:process_low {
