--- a/nextflow.config
+++ b/nextflow.config
@@ -28,9 +28,10 @@ process {
   
   }
 
-  withName:SCREENM {
+  withLabel:process_screen {
 
     container = "/workdir/TREx_shared/projects/TREX_SCREEN.sif"
+    
   }  
 
 }
