--- a/nextflow.config
+++ b/nextflow.config
@@ -30,7 +30,7 @@ process {
 
   withLabel:process_screen {
 
-    container = "/workdir/TREx_shared/projects/TREX_SCREEN.sif"
+    container = "file:///workdir/TREx_shared/projects/TREX_SCREEN.sif"
     
   }  
 
