--- a/multiqc_config.yaml
+++ b/multiqc_config.yaml
@@ -4,7 +4,7 @@ report_header_info:
   - Contact E-mail: 'trex_info@cornell.edu'
 
 
-custom_logo: "${baseDir}/img/trex-extended-logo.png"
+custom_logo: "img/trex-extended-logo.png"
 custom_logo_url: https://trex.biotech.cornell.edu/
 plots_force_interactive: True
 
