--- a/tower.yml
+++ b/tower.yml
@@ -1,6 +1,3 @@
 reports:
-  multiqc_report.html:
+  *multiqc.report.html:
     display: "MultiQC HTML report"
-
-  "**/GBCOV/CO.geneBodyCoverage.curves.pdf":
-    display: "All samples STAR Salmon DESeq2 QC PDF plots"
