--- a/screen.conf
+++ b/screen.conf
@@ -24,6 +24,7 @@ DATABASE	Fungi	/workdir/genomes/FastQ_Screen_Genomes/Fungi/fungi
 DATABASE	Protists	/workdir/genomes/FastQ_Screen_Genomes/Protists/protists
 DATABASE	AllrRNA	/workdir/genomes/contaminants/SILVA_rRNA/Bowtie2Index/AllrRNA
 DATABASE	EHV8	/workdir/genomes/FastQ_Screen_Genomes/EHV8/ehv8
+DATABASE  OC5a  /workdir/genomes/Pantoea_ananatis/OC5a/NCBI/bowtie2-index/oc5a
 
 # DATABASE  rRNA  /workdir/genomes/FastQ_Screen_Genomes/rRNA/GRCm38_rRNA
 # DATABASE	ABVF	/workdir/genomes/FastQ_Screen_Genomes/ABVF/ABVF_SP_CMP_genomes.bowtie2
