--- a/nextflow.config
+++ b/nextflow.config
@@ -43,6 +43,6 @@ workflow.onComplete = {
 }
 
 workflow.onError = {
-    println "Error: something when wrong"
+    println "Error: something went wrong"
 }
 
