--- a/nextflow.config
+++ b/nextflow.config
@@ -33,6 +33,12 @@ process {
     
   }  
 
+  withLabel:process_gbcov {
+
+    container = "file:///workdir/TREx_shared/projects/rseqc5.0.3.sif"
+
+  }
+
 }
 
 
