--- a/nextflow.config
+++ b/nextflow.config
@@ -35,7 +35,7 @@ process {
 
   withLabel:process_gbcov {
 
-    container = "file:///workdir/TREx_shared/projects/rseqc5.0.3-docker.tar.gz"
+    container = "file:///workdir/TREx_shared/projects/rseqc5.0.3.sif"
 
   }
 
